Add more code coverage for category module
Added additional test cases for Category module
- Increased coverage for edge cases
- Updated existing test cases for better accuracy
- Refactored setup for streamlined testing